index.css
@import './typography.css';
@import './layout.css';
@import "./experience.css";
@import "./utilities.css";

:root {
    /* Typography */
    --headline-1: 4rem;
    --headline-2: 1.75rem;
    --headline-3: 1.25rem;

    /* Colors */
    --primary-color: #00455E;
    --text-primary-color: #1A1A1A;
    --text-secondary-color: #5F5F5F;
    --background-color: #f2f2f2;
    --foreground-color: #FFFFFF;

    /* Shadows (https://www.joshwcomeau.com/shadow-palette/) */
    --shadow-color: 0deg 0% 62%;

    --shadow-elevation-low: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
    0.4px 0.8px 1px -1.2px hsl(var(--shadow-color) / 0.34),
    1px 2px 2.5px -2.5px hsl(var(--shadow-color) / 0.34);

    --shadow-elevation-medium: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.36),
    0.8px 1.6px 2px -0.8px hsl(var(--shadow-color) / 0.36),
    2.1px 4.1px 5.2px -1.7px hsl(var(--shadow-color) / 0.36),
    5px 10px 12.6px -2.5px hsl(var(--shadow-color) / 0.36);

    --shadow-elevation-high: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
    1.5px 2.9px 3.7px -0.4px hsl(var(--shadow-color) / 0.34),
    2.7px 5.4px 6.8px -0.7px hsl(var(--shadow-color) / 0.34),
    4.5px 8.9px 11.2px -1.1px hsl(var(--shadow-color) / 0.34),
    7.1px 14.3px 18px -1.4px hsl(var(--shadow-color) / 0.34),
    11.2px 22.3px 28.1px -1.8px hsl(var(--shadow-color) / 0.34),
    17px 33.9px 42.7px -2.1px hsl(var(--shadow-color) / 0.34),
    25px 50px 62.9px -2.5px hsl(var(--shadow-color) / 0.34);

    /* Responsiveness */
    --mobile-breakpoint: 625px;
}

html {
    scrollbar-color: #00455E white;
}

body {
    background-color: var(--background-color);
    box-shadow: var(--shadow-elevation-low);
}

main {
    background-color: var(--foreground-color);
}

aside {
    background: linear-gradient(to bottom, #005473, #00384D);
    overflow: hidden;
}

.photo {
    max-width: 120%;
    max-height: 450px;
    mask-image: url("./assets/mask.svg");
    mask-repeat: no-repeat;
    mask-size: 100%;
    transform: scale(1.1) translateX(-10%);
}


/* Link */

a {
    color: currentColor;
    text-decoration-style: dotted;
    text-underline-offset: .33em;
    text-decoration-color: var(--text-primary-color);
    transition: text-underline-offset .1s ease;
}

a:hover {
    text-underline-offset: .45em;
}

aside a {
    text-decoration-color: rgba(255, 255, 255, .5);
}

/* Meter */

meter {
    display: block;
    width: 100%;
    height: 12px;
    border: 0;
}

meter::-webkit-meter-bar {
    border: none;
    background-color: rgba(255, 255, 255, 0.25);
}

meter::-moz-meter-bar {
    border: none;
    background-color: rgba(255, 255, 255, 0.25);
}

meter::-webkit-meter-optimum-value {
    background-color: transparent;
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.8));
}

meter:-moz-meter-optimum::-moz-meter-bar {
    background-color: transparent;
    background-image: linear-gradient(to right, rgba(255, 255, 255, 0.5), rgba(255, 255, 255, 0.8));
}

label + meter {
    margin-block-start: 0.1em;
    margin-block-end: .75em;
}

